# sitemap-tracker

./: .git-blame-ignore-revs  .gitattributes  .gitignore  DETAIL-PANEL-PLAN.md  PHASE-PLAN.md  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  install.ps1  install.sh  pyproject.toml  run.ps1  run.sh  tape.ps1
.github/workflows/: release.yml
assets/: icon.icns  make_icon.py
demo/: intro.tape  render-wsl.sh
docs/: index.html
src/sitemap_generator/: __init__.py  __main__.py  app.py  app.tcss  i18n.py
src/sitemap_generator/locale/: de.json  en.json
src/sitemap_generator/models/: crawl_result.py  history.py  settings.py
src/sitemap_generator/screens/: history.py  settings.py  source_view.py
src/sitemap_generator/services/: crawler.py  page_analysis.py  source_fetcher.py
src/sitemap_generator/widgets/: crawl_header.py  page_tree.py  stats_panel.py  summary_panel.py  url_table.py
src/sitemap_tracker/: __init__.py  __main__.py  app.py  app.tcss  i18n.py
src/sitemap_tracker/locale/: de.json  en.json
src/sitemap_tracker/models/: crawl_result.py  history.py  robots.py  settings.py  sitemap_reader.py  sitemap_writer.py
src/sitemap_tracker/screens/: history.py  settings.py  source_view.py
src/sitemap_tracker/services/: crawler.py  page_analysis.py  preview_service.py  reporter.py
src/sitemap_tracker/widgets/: page_tree.py  preview_panel.py  stats_panel.py  url_table.py
tests/: test_page_analysis.py
