[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitemap-tracker"
version = "2.1.1"
description = "Sitemap Tracker - crawls websites, generates sitemap.xml, tracks dead links and SEO issues in a TUI"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.85.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "textual-image[textual]>=0.12.0",
    "Pillow>=10.0",
    "textual-themes @ git+https://github.com/michaelblaess/textual-themes.git",
    "textual-widgets @ git+https://github.com/michaelblaess/textual-widgets.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "poethepoet>=0.29",
    "ruff>=0.3",
]

[tool.setuptools.package-data]
sitemap_tracker = ["locale/*.json"]

[project.scripts]
sitemap-tracker = "sitemap_tracker.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.poe.tasks]
run = { cmd = "python -m sitemap_tracker", help = "Startet sitemap-tracker" }
test = { cmd = "pytest", help = "Tests sequentiell (schnell bei Unit-Tests)" }
test-parallel = { cmd = "pytest -n auto", help = "Tests parallel (fuer langsame Test-Suiten)" }
cov = { cmd = "pytest --cov=sitemap_tracker --cov-report=term-missing", help = "Tests + Coverage" }
typecheck = { cmd = "mypy src", help = "mypy strict ueber src/" }
lint = { cmd = "ruff check .", help = "Ruff Linting" }
fmt = { cmd = "ruff format .", help = "Ruff Formatting" }
fix = { cmd = "ruff check --fix .", help = "Ruff Auto-Fix" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501", "ASYNC109", "ASYNC240", "E402", "N806"]
